Mon Apr 28 22:36:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (cmd_usage): Change "run diffs" to "show differences";
	the former is jargon.
	* edit.c (edit_usage): Fix typo ("." -> ",").
	* edit.c (editors_usage), watch.c (watchers_usage): Mention -l.
	* checkout.c (export_usage): Say what -P does.
	* history.c (history_usg): Add comment about message wording.

Mon Apr 28 14:47:45 1997  Norbert Kiesel  <nk@cosa.de>

	* checkin.c (Checkin): use filename without path when calling
 	wrapper (bug found by Michal Schmitz <ms@cosa.de>).

Fri Apr 25 13:28:55 1997  Ian Lance Taylor  <ian@cygnus.com>

	* client.c (update_entries): In UPDATE_ENTRIES_RCS_DIFF case,
	write to a temporary file and then rename it.

Thu Apr 24 11:35:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c, cvs.h (pathname_levels): New function, from a piece of
	send_file_names.
	* client.c (send_file_names): Call pathname_levels in place of the
	code which was moved there.
	* server.c, server.h (server_pathname_check): New function.
	* recurse.c (start_recursion): Call it.
	* sanity.sh (modules3): New test modules3-11b tests for above fix.

	* filesubr.c: Do not define L_tmpnam.  It is in ANSI and SunOS4,
	so I don't think there will be a problem with it being missing.
	Defining it too small can cause memory corruption.
	(cvs_temp_name): Do not use L_tmpnam in the mktemp code; this
	could cause a buffer overflow if the -T global option was in use.

Thu Apr 24 13:21:15 1997  Norbert Kiesel  <nk@cosa.de>

	* filesubr.c (cvs_temp_name): Use tempnam if available, else
 	mktemp, else tmpnam. See the comment for rationale.

	* sanity.sh: use "tar cf - ." instead of "tar cf - *" for
 	directory copies.

Wed Apr 23 23:41:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_update_prog): If in readonly mode, give an error.

Wed Apr 23 19:07:41 1997  Norbert Kiesel  <nk@cosa.de>

	* subr.c (line2argv): Allocate at least 4 slots for argv.
